--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ Makefile*
 # QtCreator
 
 *.autosave
+/tabula-rasa_v1-2
+/build-Sources-Desktop_Qt_5_15_2_MinGW_64_bit-Release
+/build-Sources-Desktop_Qt_5_15_2_MinGW_64_bit-Debug
+/*.zip
+/*.zip
